--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,4 @@ sha3 = "0.10.8"
 # for fuzzy search over local vocabulary
 levenshtein_automata = "0.2.1"
 tantivy = "0.21.1"
+hex-literal = "0.4.1"
