--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ name = "ebm25"
 [dependencies]
 actix-web = "4.4.1"
 actix-rt = "2.5"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
